Upgrade Jackson to 3.1 (#475)
* Upgrade pom versions to Jackson 3 (and related dependencies)

* Broadly apply sed for changing imports

* ObjectMapper -> JsonMapper

Use configuration that was included as a default in Jackson 2, so as to
prevent unexpected failures

* Replace deprecated methods with modern ones

* API handles this differently now

* TypeIdResolverBase

* different group ID for jackson-annotations

https://github.com/FasterXML/jackson-bom/blob/c2ea79e9178f0aaa5e4f381c644140357bfc307e/pom.xml#L60

* Override the default max name length for tests only because truncating the test data and getting the expected data to match is a real pain

* Use bare assertions for response data

* Add WorkflowResponse API class

* Updates for Jackson 3 handling of deserialization errors due to empty request body

* Bump postgres to version 18 for tests

* fixups

* Use same JsonMapper config in tests as in deployed code