@@ -2,8 +2,6 @@ package ca.on.oicr.gsi.vidarr.cli;
 
 import ca.on.oicr.gsi.vidarr.core.BaseProcessor;
 import ca.on.oicr.gsi.vidarr.core.WorkflowConfiguration;
-import com.fasterxml.jackson.databind.ObjectMapper;
-import com.fasterxml.jackson.databind.node.ObjectNode;
 import java.io.File;
 import java.io.IOException;
 import java.text.SimpleDateFormat;
@@ -16,10 +14,13 @@ import java.util.concurrent.Executors;
 import java.util.function.Function;
 import java.util.stream.Collectors;
 import picocli.CommandLine;
+import tools.jackson.databind.DeserializationFeature;
+import tools.jackson.databind.SerializationFeature;
+import tools.jackson.databind.cfg.DateTimeFeature;
+import tools.jackson.databind.json.JsonMapper;
+import tools.jackson.databind.node.ObjectNode;
 
-/**
- * Subcommand to running unit tests
- */
+/** Subcommand to running unit tests */
 @CommandLine.Command(name = "test", description = "Run a test suite for a workflow")
 public class CommandTest implements Callable<Integer> {
 
@@ -31,7 +32,12 @@ public class CommandTest implements Callable<Integer> {
     }
   }
 
-  private static final ObjectMapper MAPPER = new ObjectMapper();
+  private static final JsonMapper MAPPER =
+      JsonMapper.builder()
+          .configure(DeserializationFeature.FAIL_ON_UNKNOWN_PROPERTIES, false)
+          .configure(DateTimeFeature.WRITE_DATES_AS_TIMESTAMPS, true)
+          .configure(SerializationFeature.ORDER_MAP_ENTRIES_BY_KEYS, true)
+          .build();
 
   @CommandLine.Option(
       names = {"-c", "--config", "--configuration"},
@@ -42,7 +48,7 @@ public class CommandTest implements Callable<Integer> {
   @CommandLine.Option(
       names = {"-i", "--include"},
       description = "Limit to test to only the listed tests")
-  private List<String> includes = List.of();
+  private final List<String> includes = List.of();
 
   @CommandLine.Option(
       names = {"-t", "--test"},
@@ -79,7 +85,7 @@ public class CommandTest implements Callable<Integer> {
         MAPPER.readValue(new File(workflowFile), WorkflowConfiguration.class).toDefinition();
     var cases = List.of(MAPPER.readValue(new File(testCases), TestCase[].class));
     if (!includes.isEmpty()) {
-      cases = cases.stream().filter(c -> includes.contains(c.getId())).collect(Collectors.toList());
+      cases = cases.stream().filter(c -> includes.contains(c.getId())).toList();
     }
     if (cases.isEmpty()) {
       System.err.println("No test cases found.");
@@ -113,7 +119,7 @@ public class CommandTest implements Callable<Integer> {
                             c.getMetadata(),
                             c.getEngineArguments())
                         .map((c.getId() + ": ")::concat))
-            .collect(Collectors.toList());
+            .toList();
     if (!errors.isEmpty()) {
       errors.forEach(System.err::println);
       return 2;
@@ -125,12 +131,15 @@ public class CommandTest implements Callable<Integer> {
             .map(
                 c -> {
                   /* Will use output directory if provided, otherwise "null" is passed into
-                     createValidator Timestamp date passed in to use as subdirectory to output
-                     directory.One is created for each vidarr-cli test run */
+                  createValidator Timestamp date passed in to use as subdirectory to output
+                  directory.One is created for each vidarr-cli test run */
                   final var validator =
-                      Validator.all(c.getValidators().stream().map(
-                          TestValidator -> TestValidator.createValidator(outputDirectory,
-                              c.getId(), date, verboseMode)));
+                      Validator.all(
+                          c.getValidators().stream()
+                              .map(
+                                  TestValidator ->
+                                      TestValidator.createValidator(
+                                          outputDirectory, c.getId(), date, verboseMode)));
 
                   final var run =
                       runner.startAsync(
@@ -170,7 +179,7 @@ public class CommandTest implements Callable<Integer> {
                             }
                           });
                 })
-            .collect(Collectors.toList())) {
+            .toList()) {
       result &= future.join();
     }
     return result ? 0 : 1;
